--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.12",
+    "@zeit/next-css": "^1.0.1",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "hamburger-react": "^2.5.0",
+    "js-cookie": "^3.0.1",
+    "next": "13.2.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
