--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "raw-loader": "^4.0.2"
