--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "draftjs-to-html": "^0.9.1",
     "hamburger-react": "^2.5.0",
     "js-cookie": "^3.0.1",
-    "next": "13.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "react": "18.2.0",
@@ -32,6 +31,8 @@
   },
   "devDependencies": {
     "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.8",
+    "next": "^13.4.8",
     "raw-loader": "^4.0.2"
   }
 }
