--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
+    "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.8.2",
     "yarn": "^1.22.19"
   },
