--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.12",
     "@zeit/next-css": "^1.0.1",
+    "aws-sdk": "^2.1415.0",
     "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "draft-js": "^0.11.7",
