--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.8.0",
     "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.8.2",
+    "swiper": "^10.0.4",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
