--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
     "@mui/material": "^5.11.12",
     "@zeit/next-css": "^1.0.1",
     "aws-sdk": "^2.1415.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -23,6 +26,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
