--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zeit/next-css": "^1.0.1",
     "aws-sdk": "^2.1415.0",
     "axios": "^1.4.0",
+    "currency.js": "^2.0.4",
     "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "draft-js": "^0.11.7",
