add cartão de credito para pagamento, add Mais de um cartão, add qual cartão por parcela, add dado formatado para matricular e gerar o valor da parcela para contas a receber, validação de dados

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
-    "@mui/material": "^5.11.12",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
     "@zeit/next-css": "^1.0.1",
     "aws-sdk": "^2.1415.0",
     "axios": "^1.4.0",
@@ -28,10 +29,11 @@
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.11.0",
     "react-input-mask": "^2.0.4",
     "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.8.2",
