--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-    "build": {
-      "env": {
-        "NODE_ENV": "production"
-      },
-      "npm": "--install --force"
-    }
+    "installCommand": "npm install --force"
   }
-  
