--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "hamburger-react": "^2.5.0",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
+    "jspdf": "^2.5.1",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "react": "18.2.0",
