add dashboard page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@zeit/next-css": "^1.0.1",
+    "apexcharts": "^3.44.0",
     "aws-sdk": "^2.1415.0",
     "axios": "^1.4.0",
     "currency.js": "^2.0.4",
@@ -30,6 +31,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.8.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "18.2.0",
