--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jspdf": "^2.5.1",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
+    "pdfmake": "^0.2.8",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.8.1",
