--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.1.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "file-saver": "^2.0.5",
     "hamburger-react": "^2.5.0",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
@@ -44,6 +45,7 @@
     "react-router-dom": "^6.8.2",
     "react-to-print": "^2.14.13",
     "swiper": "^10.0.4",
+    "xlsx": "^0.18.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
