--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "pdfmake": "^0.2.8",
