add workchat via websocket

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.8.2",
     "react-to-print": "^2.14.13",
+    "socket.io-client": "^4.7.5",
     "swiper": "^10.0.4",
     "xlsx": "^0.18.5",
     "yarn": "^1.22.19"
