add novo component de chat em tempo real, entre funcionarios

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.1.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emojibase": "^15.3.0",
     "file-saver": "^2.0.5",
     "hamburger-react": "^2.5.0",
     "html2canvas": "^1.4.1",
@@ -40,7 +41,7 @@
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-phone-number-input": "^3.3.0",
     "react-router-dom": "^6.8.2",
