--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/node": "^22.2.0",
+    "@types/react": "^18.3.3",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.8",
     "next": "^13.4.8",
-    "raw-loader": "^4.0.2"
+    "raw-loader": "^4.0.2",
+    "typescript": "^5.5.4"
   }
 }
