--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
+    "@types/react-credit-cards": "^0.8.4",
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.8",
     "next": "^13.4.8",
